--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://s0npaRi11.github.io/vipash-tech-website",
   "name": "business-website",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
